[project]
name = "fastapi-sqlalchemy"
version = "0.1.0"
description = "A powerful, fluent query builder for FastAPI and SQLAlchemy"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Kokleng Yos", email = "kokleng.yos@gmail.com"}
]
keywords = ["fastapi", "sqlalchemy", "orm", "laravel", "eloquent", "migration", "database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]
dependencies = [
    "aiomysql>=0.2.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.13.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.118.3",
    "pydantic>=2.12.0",
    "sqlalchemy>=2.0.44",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
fastapi-sqlalchemy = "fastapi_sqlalchemy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_sqlalchemy"]

[tool.hatch.version]
path = "fastapi_sqlalchemy/__init__.py"
